2003-04-15  H.J. Lu <hjl@gnu.org>

	* ld-elfcom/elfcom.exp: Fix a typo.

2003-04-14  H.J. Lu <hjl@gnu.org>

	* ld-elfcom: New directory.
	* ld-elfcom/elfcom.exp: New file: Test alignment of common symbols
	under ELF.
	* ld-elfcom/common1a.c: New file: Test source code.
	* ld-elfcom/common1b.c: New file: Test source code.

2003-04-15  Rohit Kumar Srivastava <rohits@kpitcummins.com>

	* ld-sh/sh64/crange3-cmpct.rd: Replace occurrances of 'Hitachi'
	with 'Renesas'.
	* ld-sh/sh64/crange3-media.rd: Likewise.

2002-04-13  Daniel Jacobowitz  <drow@mvista.com>

	* ld-discard/extern.s, ld-discard/start.s, ld-discard/static.s,
	ld-sh/refdbg.s: Add leading 0 to .debug_info to prevent parsing it
	for error messages.

2003-04-10  Alexandre Oliva  <aoliva@redhat.com>

	* ld-mips-elf/elf-rel-got-n32.d,
	ld-mips-elf/elf-rel-got-n64.d, ld-mips-elf/elf-rel-xgot-n32.d,
	ld-mips-elf/elf-rel-xgot-n64.d: New.
	* ld-mips-elf/mips-elf.exp (hasn32): Define as condition for
	new tests to run.

2003-04-04  Stephane Carrez  <stcarrez@nerim.fr>

	* ld-m68hc11/bug-1417.d: Update to take into account jsr->bsr relax.

2003-04-02  Bob Wilson  <bob.wilson@acm.org>

	* ld-xtensa/coalesce.exp: Skip if target is not xtensa-*-*.
	* ld-xtensa/lcall.exp: Likewise.

2003-04-01  Bob Wilson  <bob.wilson@acm.org>

        * ld-elf/merge.d: xfail xtensa-*-*.
        * ld-scripts/crossref.exp: Add -mtext-section-literals to CFLAGS
        for Xtensa targets.
        * ld-srec/srec.exp: Add -no-relax flag for Xtensa targets.
        * ld-xtensa/coalesce1.s: New file.
        * ld-xtensa/coalesce2.s: Likewise.
        * ld-xtensa/coalesce.exp: Likewise.
        * ld-xtensa/coalesce.t: Likewise.
        * ld-xtensa/lcall1.s: Likewise.
        * ld-xtensa/lcall2.s: Likewise.
        * ld-xtensa/lcall.exp: Likewise.
        * ld-xtensa/lcall.t: Likewise.

2003-03-25  Alexandre Oliva  <aoliva@redhat.com>

	* ld-mips-elf/mips-elf.exp: Added...
	* ld-mips-elf/relax-jalr.s, ld-mips-elf/relax-jalr-n32.d,